--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 *.class
 *.log
 
+.vscode/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+**/target/**
+.metals/**
+project/**
+.bloop/**
+.bsp/**
+*.db
+.idea/**
+
+!project/build.properties
+!project/plugins.sbt
+
+**/.idea/**
